Tue May 31 23:49:08 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (offset_to_sec): fixed invalid validation.

Tue May 31 23:43:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (GetVpValueWithPrec): replace the algorithm for
	  coercing from a Rational to stop requiring "bigecimal/util.rb".
	  [ruby-core:34318]

	* ext/bigdecimal/bigdecimal.c (GetVpValue): refactoring.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_new): support instantiation from a
	  Rational.

	* test/bigdecimal/test_bigdecimal.rb (test_global_new_with_rationao): add a
	  test for the above change.

	* test/bigdecimal/test_bigdecimal.rb (test_new_with_rationao): ditto.

Tue May 31 22:44:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_new): support instantiation a
	  BigDecimal object from an Integer.

	* test/bigdecimal/test_bigdecimal.rb (test_new_with_integer):
	  add for testing the above change.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_global_new): replace its body
	  with a BigDecimal_new call.

	* test/bigdecimal/test_bigdecimal.rb (test_global_new_with_integer):
	  add for testing the above change.

Tue May 31 22:24:39 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: use simple/complex mode instead of light/right mode.
	* test/date/*.rb: followed the above changes.

Tue May 31 21:28:33 2011  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_signal.rb (TestSignal#test_signal_requiring):
	  initialize SIGINT handler.

Tue May 31 17:03:24 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* lib/net/http.rb, lib/net/protocol.rb: Allow to configure to wait
	  server returning '100 continue' response befor sending HTTP request
	  body. See NEWS for more detail. See #3622.
	  Original patch is made by Eric Hodel <drbrain@segment7.net>.

	* test/net/http/test_http.rb: test it.

	* NEWS: Add new feature.

Tue May 31 14:17:49 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
