@@ -485,6 +485,12 @@ class TestBigDecimal < Test::Unit::TestCase
     assert_instance_of(Float, a)
     assert_instance_of(Float, b)
     assert_equal(2, 1 + BigDecimal.new("1"), '[ruby-core:25697]')
+
+    a, b = BigDecimal("1").coerce(1.quo(10))
+    assert_equal(BigDecimal("0.1"), a, '[ruby-core:34318]')
+
+    a, b = BigDecimal("0.11111").coerce(1.quo(3))
+    assert_equal(BigDecimal("0." + "3"*a.precs[0]), a)
   end
 
   def test_uplus
